force-app/main/default/objects/Asset__c/fields/Accruals_Asset_Value__c.field-meta.xml
<CustomField>
    <fullName>Accruals_Asset_Value__c</fullName>
    <label>Accruals Asset Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>