force-app/main/default/objects/Asset__c/fields/Asset_Holder_Name_and_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Holder_Name_and_Ref_Number__c</fullName>
    <label>Asset Holder Name and Ref Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>