force-app/main/default/objects/Asset__c/fields/Date_of_Death_Value__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Death_Value__c</fullName>
    <label>Date of Death Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>