force-app/main/default/objects/Asset__c/fields/Estate_and_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Estate_and_Accrual__c</fullName>
    <label>Estate and Accrual</label>
    <referenceTo>EstateAcc__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>