force-app/main/default/objects/Asset__c/fields/Value_of_Assets_Collected__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Assets_Collected__c</fullName>
    <label>Value of Assets Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>